fixed a bunch of display and functional issues: * Kill Beta route * Fade content on carousel beforeSend * Changed 2nd HP layout loading order * Story audio not playing on Firefox

--- a/app/assets/stylesheets/videos.css.scss
+++ b/app/assets/stylesheets/videos.css.scss
@@ -35,7 +35,7 @@
 		text-align: center;
 		cursor: pointer;
 		display: block;
-		width: 160px;
+		width: 135px;
 		border: 1px solid $grayDark;
 		&:hover, &.active {
 			border-color:$grayLight;
