--- a/app/assets/stylesheets/widgets.css.scss
+++ b/app/assets/stylesheets/widgets.css.scss
@@ -120,14 +120,14 @@
 	background-color:#fff;
 	height:61px;
 	position:fixed;
-	display: none;
+	visibility: hidden;
 	z-index:55;
 	bottom:-61px;
 	$nav-shadow: 0 -2px 9px -2px rgba(102,102,102,1), 0 -2px 9px -2px #666;
 	@include box-shadow($nav-shadow);
 	
 	&.active { 
-		display: block;
+		visibility:visible;
 	}
 	
 	.section-left { 
